--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node ./server/index.js"
+    "start": "node ./server/index.js . ~/"
   },
   "author": "Aman Vishnani",
   "license": "MIT"
