--- a/package.json
+++ b/package.json
@@ -3,11 +3,47 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node ./server/index.js . ~/ ./server/index.js ./server"
+    "start-react": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "start": "concurrently 'npm:start-node' 'npm:start-react'",
+    "start-node": "node ./server/index.js ./server/index.js ./server"
   },
   "author": "Aman Vishnani",
   "license": "MIT",
   "dependencies": {
-    "chokidar": "^3.5.2"
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.48",
+    "@mui/material": "^5.0.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "chokidar": "^3.5.2",
+    "concurrently": "^6.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
