--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch via NPM",
+            "name": "Launch Node",
             "request": "launch",
             "runtimeArgs": [
                 "run-script",
-                "start"
+                "start-node"
+            ],
+            "runtimeExecutable": "npm",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "pwa-node"
+        },
+        {
+            "name": "Launch react",
+            "request": "launch",
+            "runtimeArgs": [
+                "run-script",
+                "start-react"
             ],
             "runtimeExecutable": "npm",
             "skipFiles": [
