--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@testing-library/user-event": "^12.8.3",
     "chokidar": "^3.5.2",
     "concurrently": "^6.2.1",
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "eslintConfig": {
@@ -45,5 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
